feat:raw to span
Signed-off-by: Chen Kai <281165273grape@gmail.com>